Add update user endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=spring-platimee
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/platimeedb
+spring.datasource.username=platimeeuser
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect # Hibernate auto picks the right dialect based on the url
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.open-in-view=false
