Use deployed version of database and recommendation system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=spring-platimee
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/platimeedb
-#spring.datasource.username=platimeeuser
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://dpg-d0p41a3ed6usr73dfjjug-a.frankfurt-postgres.render.com:5432/plat_imee_database
+spring.datasource.username=plat_imee_database_user
+spring.datasource.password=FMNCKKBO6esTEI56kI022Me6PyLWJrx
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect # Hibernate auto picks the right dialect based on the url
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+JWT_SECRET=ThisIsMy32CharMinimumLengthSecret!
