Use environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=spring-platimee
 
-spring.datasource.url=jdbc:postgresql://dpg-d0p41a3ed6usr73dfjjug-a.frankfurt-postgres.render.com:5432/plat_imee_database
-spring.datasource.username=plat_imee_database_user
-spring.datasource.password=FMNCKKBO6esTEI56kI022Me6PyLWJrx
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-JWT_SECRET=ThisIsMy32CharMinimumLengthSecret!
+JWT_SECRET=${JWT_SECRET}
