--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- Spring JPA Configuration
+# create-drop is used for testing
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
