--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- Spring JPA Configuration
 # create-drop is used for testing
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
 
 # --- JWT / Security Configuration
@@ -23,3 +23,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.debug=false
+
+# --- Frontend Configuration ---
+FRONTEND_URL=${FRONTEND_URL}
