--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,21 +8,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- Spring JPA Configuration
 # create-drop is used for testing
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
 
 # --- JWT / Security Configuration
 JWT_SECRET=${JWT_SECRET}
 
-# --- Email Configuration ---
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.debug=false
+# --- Resend Email Configuration ---
+resend.api-key=${RESEND_API_KEY}
+resend.from=${RESEND_FROM_EMAIL:onboarding@resend.dev}
 
 # --- Frontend Configuration ---
 FRONTEND_URL=${FRONTEND_URL}
