Fix backend deploy on Render by binding server port to

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ resend.from=${RESEND_FROM_EMAIL:onboarding@resend.dev}
 
 # --- Frontend Configuration ---
 FRONTEND_URL=${FRONTEND_URL}
+
+# --- Server Configuration ---
+server.port=${PORT:8080}
